load-tests/route_guide_client_streaming/deployment/deployment-patch.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: no-name
spec:
  template:
    spec:
      containers:
      - name: "route-guide-client-streaming-deployment"
        imagePullPolicy: Always
