load-tests/route_guide_client_streaming/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ballerina-adservice
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: bal.perf.test
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: ballerina-adservice
            port:
              number: 9090
